--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,32 +1,10 @@
 name: CI on compilers
 
 on:
-  - push
-  - pull_request
+  push:
+  pull_request:
 
 jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-    needs: [check-protected-files]
-
-    strategy:
-      matrix:
-        java: [21, 25]
-
-    steps:
-    - name: Checking of the code
-      uses: actions/checkout@v4
-
-    - name: Set up JDK 21+
-      uses: actions/setup-java@v4
-      with:
-        distribution: temurin
-        java-version: ${{ matrix.java }}
-        cache: maven
-
-    - name: Build and run tests
-      run:
-        mvn clean test
 
   check-protected-files:
     runs-on: ubuntu-latest
@@ -39,21 +17,53 @@ jobs:
 
       - name: Check for forbidden file changes
         run: |
-          if [[ "$GITHUB_ACTOR" != "myambohlulani" ]]; then
-              exit 1
-            fi
           PROTECTED_FILES=(
-          "pom.xml"
-          ".github/workflows/main.yaml"
-          "LICENSE"
+            "pom.xml"
+            ".github/workflows/main.yaml"
+            "LICENSE"
           )
-          CHANGED_FILES=$(git diff --name-only origin/main..HEAD)
+
+          # Determine correct base for comparison
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            BASE_SHA="${{ github.event.pull_request.base.sha }}"
+          else
+            BASE_SHA="origin/main"
+          fi
+
+          CHANGED_FILES=$(git diff --name-only $BASE_SHA HEAD)
+
           echo "Changed files:"
-          echo "${CHANGED_FILES}"
+          echo "$CHANGED_FILES"
+
           for file in "${PROTECTED_FILES[@]}"; do
-            if echo "${CHANGED_FILES}" | grep -qx "${file}"; then
-              echo "Error: ${file} must not me modified."
-              exit 1
+            if echo "$CHANGED_FILES" | grep -Fxq "$file"; then
+              if [[ "$GITHUB_ACTOR" != "myambohlulani" ]]; then
+                echo "Error: Only myambohlulani can modify $file"
+                exit 1
+              fi
             fi
           done
-          echo "No protected files were modified!"
+
+          echo "Protected file check passed!"
+
+  build-and-test:
+    runs-on: ubuntu-latest
+    needs: check-protected-files
+
+    strategy:
+      matrix:
+        java: [21, 25]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: ${{ matrix.java }}
+          cache: maven
+
+      - name: Build and run tests
+        run: mvn clean test
